kubernetes/apps/buildbarn/buildbarn/app/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: buildbarn-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buildbarn-worker
    spec:
      enableServiceLinks: false
      containers:
        - name: worker
          image: ghcr.io/buildbarn/bb-worker:20260326T163248Z-e6ab874
          args:
            - /config/worker-ubuntu22-04.jsonnet
            - -V
            - NODE_NAME=$(NODE_NAME)
            - -V
            - POD_NAME=$(POD_NAME)
          ports:
            - name: metrics
              containerPort: 9980
          volumeMounts:
            - name: config
              mountPath: /config
            - name: worker
              mountPath: /worker
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              memory: 2Gi
        - name: runner
          image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:dd7654ffb01d5b7b54b23b9ce928a1f7f2d08c7b3d7e320b6574b55d7ccde78b
          command:
            - /bb/bb_runner
          args:
            - /config/runner-ubuntu22-04.jsonnet
          volumeMounts:
            - name: config
              mountPath: /config
            - name: runner-installer
              mountPath: /bb
            - name: worker
              mountPath: /worker
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              memory: 2Gi
      volumes:
        - name: config
          configMap:
            name: buildbarn-config
        - name: runner-installer
          emptyDir: {}
        - name: worker
          emptyDir: {}
