kubernetes/apps/buildbarn/buildbarn/app/browser.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: browser
spec:
  selector:
    app.kubernetes.io/name: buildbarn-browser
  ports:
    - name: http
      port: 7984
      targetPort: 7984
    - name: metrics
      port: 9980
      targetPort: 9980
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: buildbarn-browser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buildbarn-browser
    spec:
      enableServiceLinks: false
      containers:
        - name: browser
          image: ghcr.io/buildbarn/bb-browser:20260319T101727Z-1731858
          args:
            - /config/browser.jsonnet
          ports:
            - name: http
              containerPort: 7984
            - name: metrics
              containerPort: 9980
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: buildbarn-config
