kubernetes/apps/buildbarn/buildbarn/app/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app.kubernetes.io/name: buildbarn-frontend
  ports:
    - name: grpc
      port: 8980
      targetPort: 8980
    - name: metrics
      port: 9980
      targetPort: 9980
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: buildbarn-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buildbarn-frontend
    spec:
      enableServiceLinks: false
      containers:
        - name: frontend
          image: ghcr.io/buildbarn/bb-storage:20260326T151518Z-d0c6f26
          args:
            - /config/frontend.jsonnet
          ports:
            - name: grpc
              containerPort: 8980
            - name: metrics
              containerPort: 9980
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: buildbarn-config
