kubernetes/apps/buildbarn/buildbarn/app/scheduler.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
spec:
  selector:
    app.kubernetes.io/name: buildbarn-scheduler
  ports:
    - name: admin
      port: 7982
      targetPort: 7982
    - name: client
      port: 8982
      targetPort: 8982
    - name: worker
      port: 8983
      targetPort: 8983
    - name: buildqueue
      port: 8984
      targetPort: 8984
    - name: metrics
      port: 9980
      targetPort: 9980
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: buildbarn-scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buildbarn-scheduler
    spec:
      enableServiceLinks: false
      containers:
        - name: scheduler
          image: ghcr.io/buildbarn/bb-scheduler:20260326T163248Z-e6ab874
          args:
            - /config/scheduler.jsonnet
          ports:
            - name: admin
              containerPort: 7982
            - name: client
              containerPort: 8982
            - name: worker
              containerPort: 8983
            - name: buildqueue
              containerPort: 8984
            - name: metrics
              containerPort: 9980
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: buildbarn-config
