kubernetes/apps/buildbarn/buildbarn/app/storage.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: buildbarn-storage
  ports:
    - name: grpc
      port: 8981
      targetPort: 8981
    - name: metrics
      port: 9980
      targetPort: 9980
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
spec:
  serviceName: storage
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: buildbarn-storage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buildbarn-storage
    spec:
      enableServiceLinks: false
      containers:
        - name: storage
          image: ghcr.io/buildbarn/bb-storage:20260326T151518Z-d0c6f26
          args:
            - /config/storage.jsonnet
          ports:
            - name: grpc
              containerPort: 8981
            - name: metrics
              containerPort: 9980
          volumeMounts:
            - name: config
              mountPath: /config
            - name: storage-cas
              mountPath: /storage-cas
            - name: storage-ac
              mountPath: /storage-ac
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          configMap:
            name: buildbarn-config
  volumeClaimTemplates:
    - metadata:
        name: storage-cas
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: openebs-hostpath
        resources:
          requests:
            storage: 33Gi
    - metadata:
        name: storage-ac
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: openebs-hostpath
        resources:
          requests:
            storage: 1Gi
