kubernetes/apps/buildbarn/buildbarn/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: buildbarn-frontend
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - buildbarn.goyangi.io
  rules:
    - backendRefs:
        - name: frontend
          port: 8980
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buildbarn-browser
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - browser.buildbarn.goyangi.io
  rules:
    - backendRefs:
        - name: browser
          port: 7984
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buildbarn-scheduler
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - scheduler.buildbarn.goyangi.io
  rules:
    - backendRefs:
        - name: scheduler
          port: 7982
